# poemy2

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  install-sparsehash.sh  leak
corpora/goth/: abney park - she.txt  abney park - stigmata martyr.txt  abney park - the wrong side.txt  abney park - throw them overboard.txt  abney park - turn back.txt  and one - enjoy the unknown.txt  and one - high.txt  and one - military fashion show.txt  and one - my story.txt  anne boleyn - o death rock me to sleep.txt  apoptygma berzerk - nearer.txt  apoptygma berzerk - unicorn.txt  bauhaus - bela lugosi's dead.txt  blutengel - angels of the dark.txt  blutengel - behind the mirror.txt  blutengel - bloody pleasures.txt  blutengel - children of the night.txt  blutengel - leave the day.txt  blutengel - lucifer.txt  blutengel - second chance.txt  blutengel - singing dead men.txt  blutengel - soultaker.txt  charles baudelaire - the vampire.txt  clan of xymox - this world.txt  covenant - like tears in rain.txt  cruxshadows - ave maria.txt  cruxshadows - cruelty.txt  cruxshadows - heavens gaze.txt  cruxshadows - leave me alone.txt  cruxshadows - marilyn my bitterness.txt  cruxshadows - monsters.txt  cruxshadows - tears.txt  cruxshadows - winter born.txt  culture kultur - promised land blues.txt  death in june - little black angel.txt  deine lakaien - dark star.txt  deine lakaien - over and done.txt  deine lakaien - return.txt  diorama - advance.txt  edgar allan poe - annabel lee.txt  (+28 more)
corpora/literature/: leo tolstoy - war and peace.txt
corpora/shakespeare-sonnets/: sonnet-002.txt  sonnet-003.txt  sonnet-005.txt  sonnet-006.txt  sonnet-007.txt  sonnet-008.txt  sonnet-009.txt  sonnet-010.txt  sonnet-011.txt  sonnet-012.txt  sonnet-013.txt  sonnet-014.txt  sonnet-017.txt  sonnet-018.txt  sonnet-019.txt  sonnet-020.txt  sonnet-021.txt  sonnet-022.txt  sonnet-023.txt  sonnet-024.txt  sonnet-025.txt  sonnet-026.txt  sonnet-027.txt  sonnet-028.txt  sonnet-029.txt  sonnet-030.txt  sonnet-031.txt  sonnet-032.txt  sonnet-033.txt  sonnet-034.txt  sonnet-035.txt  sonnet-037.txt  sonnet-038.txt  sonnet-039.txt  sonnet-041.txt  sonnet-042.txt  sonnet-043.txt  sonnet-044.txt  sonnet-045.txt  sonnet-046.txt  (+108 more)
data/: bad_end_words.txt  bad_start_words.txt  cmudict.txt
data/isledict/: README-PHONES.txt  README-POS.txt  README.txt  SOURCES.bib
gtest-1.6.0/: Makefile.in  aclocal.m4  configure
src/: MurmurHash3.cc  cmudict.cc  cmudict_parse.cc  cmudict_parse.rl  cmudict_test.cc  corpus.cc  corpus.h  corpus_test.cc  dict.cc  error.cc  error_test.cc  hash_test.cc  isledict.cc  isledict.h  isledict_parse.cc  isledict_parse.rl  isledict_test.cc  main.cc  markov.cc  markov.h  markov_test.cc  memoryfile.cc  poemy.h  pronounce.cc  pronounce_test.cc  test.cc  test_corpus.cc  test_main.cc  timeit.cc  util.cc  util.h
src/poemy/: cmudict.h  corpus.h  defines.h  dict.h  error.h  hash.h  isledict.h  markov.h  memoryfile.h  poemy.h  pronounce.h  timeit.h  unique.h  util.h
